k8s/traefik/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-gateway-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`app.devopsgeek.dev`)
    kind: Rule
    services:
    - name: api-gateway
      port: 8000
  tls:
    certResolver: letsencrypt
    domains:
    - main: app.devopsgeek.dev
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`devopsgeek.dev`) || Host(`www.devopsgeek.dev`)
    kind: Rule
    services:
    - name: frontend
      port: 3000
  tls:
    certResolver: letsencrypt
    domains:
    - main: devopsgeek.dev
      sans:
      - www.devopsgeek.dev
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`rabbitmq.devopsgeek.dev`)
    kind: Rule
    services:
    - name: rabbitmq-headless
      port: 15672
  tls:
    certResolver: letsencrypt
    domains:
    - main: rabbitmq.devopsgeek.dev
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.devopsgeek.dev`)
    kind: Rule
    services:
    - name: traefik
      port: 8080
  tls:
    certResolver: letsencrypt
    domains:
    - main: traefik.devopsgeek.dev
