k8s/traefik/monitoring-ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.devopsgeek.dev`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
  tls:
    certResolver: letsencrypt
    domains:
    - main: grafana.devopsgeek.dev
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`prometheus.devopsgeek.dev`)
    kind: Rule
    services:
    - name: prometheus
      port: 9090
  tls:
    certResolver: letsencrypt
    domains:
    - main: prometheus.devopsgeek.dev
